<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#878787"
    android:gravity="center">

    <ImageView
        android:id="@+id/bilde"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:scaleType="centerInside"
        />

    <TextView
        android:id="@+id/tekst1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YEEEEEEEET"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tekst2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BEEEEEEEET"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center|bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9">

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/b1"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b2"
            android:layout_weight="1"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b3"
            android:layout_weight="1"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b4"
            android:layout_weight="1"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b5"
            android:layout_weight="1"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b6"
            android:layout_weight="1"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b7"
            android:layout_weight="1"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b8"
            android:layout_weight="1"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b9"
            android:layout_weight="1"
            android:textSize="24sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9">

    <Button
        android:id="@+id/button10"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b10"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button11"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b11"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button12"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b12"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button13"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b13"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button14"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b14"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button15"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b15"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button16"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b16"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button17"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b17"
        android:layout_weight="1"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/button18"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b18"
        android:layout_weight="1"
        android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <Button
            android:id="@+id/button19"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b19"
            android:layout_weight="1"
            android:textSize="24sp"/>

    <Button
        android:id="@+id/button20"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b20"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button21"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b21"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button22"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b22"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button23"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b23"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button24"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b24"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button25"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b25"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button26"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b26"
        android:layout_weight="1"
        android:textSize="24sp"/>

    </LinearLayout>

   </LinearLayout>

</LinearLayout>