<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#878787"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"/>

        <Button
            android:id="@+id/play"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/play"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rules"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/set"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/stat"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/stat"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:weightSum="2">
        <ImageButton
            android:id="@+id/norsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/norway"
            android:background="#FFFFFF"
            android:scaleType="fitXY"
            android:layout_weight="1" />
        <ImageButton
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/usa"
            android:background="#FFFFFF"
            android:scaleType="fitXY"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
